helm-infra/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
#  namespace: grafana
spec:
  parentRefs:
    - kind: Gateway
      name: application-gateway
      namespace: application-gateway
#  hostnames:
#    - grafana-host
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
#      filters:
#        - type: URLRewrite
#          urlRewrite:
#            path:
#              type: ReplacePrefixMatch
#              replacePrefixMatch: /
      backendRefs:
        - name: prometheus-grafana
          port: 80
